# paper-agent

./: .env.example  .gitignore  README.md  main.py  playwright_acm_workflow.md  pyproject.toml
docs/: README.md  codebase_map_zh.md  pipeline_guide_zh.md  playwright_acm_workflow.md
paper_agent/: __init__.py  batch_support.py  chrome_cdp.py  cli.py  conference_fetch.py  conference_types.py  config.py  exporters.py  kimi_client.py  narrative.py  narrative_detail.py  narrative_detail_export.py  pdf_extract.py  playwright_download.py  prompts.py  rebuild_exports.py  report.py  runtime.py  sections.py  url_enrichment.py  utils.py  venue_osdi.py  venue_pldi.py  venue_popl.py  venue_sosp.py  workflow.py
paper_agent/analysis/: __init__.py  kimi_client.py  prompts.py  report_stage.py  url_resource_stage.py  web_search.py  workflow.py  workflow_support.py
paper_agent/browser/: __init__.py  chrome_cdp.py  playwright_download.py
paper_agent/conference/: __init__.py  cli.py  fetch.py  http.py  paper_ops.py  parsing.py
paper_agent/conference/venues/: __init__.py  osdi.py  pldi.py  popl.py  sosp.py
paper_agent/narrative_stack/: __init__.py  detail.py  detail_export.py  narrative.py
paper_agent/reporting/: __init__.py  exporters.py  narrative_markdown.py  rebuild_exports.py  reference_appendix.py  report.py  section_renderers.py  text_utils.py
tests/: test_analysis_stage_helpers.py  test_batch_support.py  test_chrome_cdp.py  test_cli_smoke.py  test_conference_fetch.py  test_config.py  test_narrative.py  test_narrative_cli_smoke.py  test_narrative_detail.py  test_reporting_report.py  test_workflow_smoke.py
