[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longchain-paper-agent"
version = "0.1.0"
description = "Deep paper analysis assistant built around local PDF extraction, Qwen 3.5, and LangGraph orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.60",
  "langchain-core>=0.3.0",
  "openai>=1.52.0",
  "python-dotenv>=1.0.1",
  "reportlab>=4.4.0",
  "typing-extensions>=4.12.2",
]

[project.scripts]
paper-agent = "paper_agent.cli:main"

[tool.setuptools]
packages = ["paper_agent"]
