[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longchain-paper-agent"
version = "0.1.0"
description = "Deep paper analysis assistant built around local PDF extraction, Qwen 3.5, and LangGraph orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.60",
  "langchain-core>=0.3.0",
  "openai>=1.52.0",
  "playwright>=1.53.0",
  "python-dotenv>=1.0.1",
  "reportlab>=4.4.0",
  "typing-extensions>=4.12.2",
]

[project.scripts]
paper-agent = "paper_agent.cli:main"
paper-agent-fetch = "paper_agent.conference.fetch:main"
paper-agent-chrome-cdp = "paper_agent.chrome_cdp:main"
paper-agent-narrative = "paper_agent.narrative:main"
paper-agent-narrative-detail = "paper_agent.narrative_detail:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["paper_agent*"]
